[project]
name = "blog"
version = "0.1.0"
description = "blog using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.148.0,<1.0.0"
]

[project.scripts]
blog = "blog.main:run"
run_crew = "blog.main:run"
train = "blog.main:train"
replay = "blog.main:replay"
test = "blog.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
